Sprucing up notebook.

--- a/Guaymas_parse.ipynb
+++ b/Guaymas_parse.ipynb
@@ -1051,44 +1051,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(45, 23)"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#Drop duplicates by phylum\n",
-    "pet_unique_phylum = pet_new_.drop_duplicates(subset=['level_1'], keep='first')\n",
-    "pet_unique_phylum.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Export pet_unique_phylum with temperature to csv\n",
-    "pet_unique_phylum.to_csv('../../data/results/PETHits_uniquephyla_Guaymas2020.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
    "outputs": [],
    "source": [
     "#write out a fasta file of all of the proteins\n",
-    "pet_fp = '../../data/results/PETHits_uniquephyla_Guaymas2020.fasta'\n",
+    "pet_fp = '../../data/results/PETHits_uniqueclassification_Guaymas2020.fasta'\n",
     "with open(pet_fp, 'w') as f:\n",
-    "    for seq in pet_unique_phylum[['target_name', 'aa_sequence']].values:\n",
+    "    for seq in pet_new_[['target_name', 'aa_sequence']].values:\n",
     "        f.write('>' + seq[0] + '\\n')\n",
     "        f.write(seq[1] + '\\n')\n",
     "    f.close()\n",
